--- a/package.json
+++ b/package.json
@@ -1,5 +1,81 @@
 {
   "devDependencies": {
     "tailwindcss": "^3.1.8"
-  }
+  },
+  "name": "build",
+  "description": "",
+  "version": "1.0.0",
+  "main": "tailwind.config.js",
+  "dependencies": {
+    "acorn-walk": "^7.2.0",
+    "acorn-node": "^1.8.2",
+    "arg": "^5.0.2",
+    "anymatch": "^3.1.2",
+    "acorn": "^7.4.1",
+    "binary-extensions": "^2.2.0",
+    "braces": "^3.0.2",
+    "camelcase-css": "^2.0.1",
+    "color-name": "^1.1.4",
+    "chokidar": "^3.5.3",
+    "detective": "^5.2.1",
+    "defined": "^1.0.0",
+    "cssesc": "^3.0.0",
+    "dlv": "^1.1.3",
+    "fast-glob": "^3.2.11",
+    "didyoumean": "^1.2.2",
+    "fastq": "^1.13.0",
+    "fill-range": "^7.0.1",
+    "function-bind": "^1.1.1",
+    "glob-parent": "^6.0.2",
+    "is-core-module": "^2.10.0",
+    "is-extglob": "^2.1.1",
+    "is-binary-path": "^2.1.0",
+    "has": "^1.0.3",
+    "is-number": "^7.0.0",
+    "is-glob": "^4.0.3",
+    "lilconfig": "^2.0.6",
+    "merge2": "^1.4.1",
+    "micromatch": "^4.0.5",
+    "minimist": "^1.2.6",
+    "normalize-path": "^3.0.0",
+    "nanoid": "^3.3.4",
+    "object-hash": "^3.0.0",
+    "path-parse": "^1.0.7",
+    "postcss": "^8.4.16",
+    "picocolors": "^1.0.0",
+    "picomatch": "^2.3.1",
+    "pify": "^2.3.0",
+    "postcss-import": "^14.1.0",
+    "postcss-js": "^4.0.0",
+    "postcss-nested": "^5.0.6",
+    "postcss-load-config": "^3.1.4",
+    "postcss-selector-parser": "^6.0.10",
+    "postcss-value-parser": "^4.2.0",
+    "queue-microtask": "^1.2.3",
+    "read-cache": "^1.0.0",
+    "quick-lru": "^5.1.1",
+    "resolve": "^1.22.1",
+    "source-map-js": "^1.0.2",
+    "readdirp": "^3.6.0",
+    "reusify": "^1.0.4",
+    "run-parallel": "^1.2.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "to-regex-range": "^5.0.1",
+    "util-deprecate": "^1.0.2",
+    "xtend": "^4.0.2",
+    "yaml": "^1.10.2"
+  },
+  "scripts": {
+    "start": "npm"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rohitpatwardhan27/build-block.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/rohitpatwardhan27/build-block/issues"
+  },
+  "homepage": "https://github.com/rohitpatwardhan27/build-block#readme"
 }
